--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     />
 
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="The Snnipet" />
+    <meta name="description" content="secondBrainAI" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TheSnippet</title>
+    <title>secondBrainAI</title>
   </head>
   <!-- Google tag (gtag.js) -->
   <script
